--- a/Front/package.json
+++ b/Front/package.json
@@ -26,6 +26,7 @@
     "@angular/ssr": "^17.3.9",
     "@coreui/angular": "^5.2.17",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "driver.js": "^1.3.1",
     "express": "^4.18.2",
     "fa": "^1.0.1",
     "rxjs": "~7.8.0",
