--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r /Backend/requirements.txt
+          pip install -r /Backend/comms/requirements.txt
 
       - name: Deploy to Server
         env:
